tests/NormalTests/paczka1/fuzzy1/32035797.err
Error in line 2: å1VUg A675 25,1
Error in line 1: FMwYmK S816 32,6
Error in line 4: FMwYmK A675 12,5
Error in line 7: FBgQptYn S816 9,7
Error in line 15: Bo5gwVmlLLk A675 91,7
Error in line 28: S104 S495 10,9
